--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
 }
 
 #menu-bar {
